rapidftr/tracker#30 Fix error messages for login, introduce AndroidAnnotations and PowerMock